--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -29,7 +29,7 @@ h2 {
 .App {
   height: 100%;
   padding: 0 17% 10% 17%;
-  background-image: url("./background_photo_desktop.jpg");
+  background-image: url("https://uploads.codesandbox.io/uploads/user/7edac254-d746-46cc-9d29-fbfd1d4a91e6/GVHZ-background_photo_desktop.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
